chore: opens direct download in another window

--- a/web/angular-wallet/src/app/components/new-version-dialog/new-version-dialog.component.html
+++ b/web/angular-wallet/src/app/components/new-version-dialog/new-version-dialog.component.html
@@ -59,9 +59,9 @@
 
     <div>
       <a *ngIf="updateInfo.certInfo.isValid" class="font-size-10 grey-500-fg"
-         href="{{updateInfo.releaseUrl}}">{{'download_at_verified_source' | i18n}}</a>
+         href="{{updateInfo.releaseUrl}}" target="_blank">{{'download_at_verified_source' | i18n}}</a>
       <a *ngIf="!updateInfo.certInfo.isValid" class="font-size-12"
-         href="{{updateInfo.releaseUrl}}">{{'download_at_verified_source' | i18n}}</a>
+         href="{{updateInfo.releaseUrl}}" target="_blank">{{'download_at_verified_source' | i18n}}</a>
     </div>
 
   </div>
