feat: updated unstoppable domains for new domains

--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -1,11 +1,11 @@
 <form (ngSubmit)="onSubmit($event);" #sendBurstForm="ngForm">
 
-  <burst-recipient-input [recipientValue]="recipient.addressRaw"
+  <recipient-input [recipientValue]="recipient.addressRaw"
                          (recipientChange)="onRecipientChange($event)"
                          (qrCodeUpload)="onQRUpload($event)"
                          [disabled]="immutable">
 
-  </burst-recipient-input>
+  </recipient-input>
 
   <div class="amount-wrapper">
     <mat-form-field>
