--- a/web/angular-wallet/src/app/layout/components/recipient-input/recipient-input.component.scss
+++ b/web/angular-wallet/src/app/layout/components/recipient-input/recipient-input.component.scss
@@ -20,7 +20,7 @@ mat-form-field {
     &.valid {
       color: white;
       background: #00b386;
-      
+
       mat-icon {
         color: white;
       }
@@ -30,7 +30,7 @@ mat-form-field {
       background: lightgray;
     }
 
-    &.zil-outage {
+    &.unstoppable-outage {
       background: red;
       color: white;
 
@@ -83,7 +83,7 @@ mat-progress-bar {
   font-weight: 700;
   color: #666;
   display: inline-block;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 .inputfile:focus + .camera-icon,
