--- a/web/angular-wallet/src/app/main/request-burst/request-burst-qr/request-burst-qr.component.html
+++ b/web/angular-wallet/src/app/main/request-burst/request-burst-qr/request-burst-qr.component.html
@@ -4,8 +4,8 @@
 
   <ul>
     <li><strong>{{ 'recipient' | i18n }}</strong>: {{ recipientRS }}</li>
-    <li><strong>{{ 'amount' | i18n }}</strong>: {{ amountNQT | burstAmount }}</li>
-    <li><strong>{{ 'fee' | i18n }}</strong>: {{ feeNQT | burstAmount }}</li>
+    <li><strong>{{ 'amount' | i18n }}</strong>: {{ amountNQT | amount }}</li>
+    <li><strong>{{ 'fee' | i18n }}</strong>: {{ feeNQT | amount }}</li>
     <li><strong>{{ 'immutable' | i18n }}</strong>: {{ !!immutable }}</li>
   </ul>
 </div>
