--- a/web/angular-wallet/src/app/main/request-burst/request-burst.component.html
+++ b/web/angular-wallet/src/app/main/request-burst/request-burst.component.html
@@ -27,7 +27,7 @@
 
         </form>
         <div class="submit-qr">
-          <span><strong>{{'total' | i18n}}:</strong> {{ getTotal() | burstAmount }}</span>
+          <span><strong>{{'total' | i18n}}:</strong> {{ getTotal() | amount }}</span>
           <button type="submit"
                   class="mr-8"
                   mat-raised-button
