fix: responsive transaction table - fixes #1500

--- a/web/angular-wallet/src/app/components/page/page.component.html
+++ b/web/angular-wallet/src/app/components/page/page.component.html
@@ -22,7 +22,7 @@
 
   <!-- CENTER -->
   <div class="content-container" [style.background-image]="bgImgSrc">
-    <div [ngClass]="{content: true, wide:wide===true}">
+    <div [ngClass]="{content: true, wide:wide===true, full:full===true}">
       <ng-content></ng-content>
     </div>
   </div>
