--- a/web/angular-wallet/src/app/main/transactions/transactions.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transactions.component.html
@@ -1,23 +1,5 @@
-<div class="page-layout blank simple" fusePerfectScrollbar>
-
-  <!-- HEADER -->
-  <div class="header accent p-24 h-160" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row"
-       fxLayoutAlign.gt-xs="space-between center">
-
-    <div fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="column" fxLayoutAlign.gt-xs="center start">
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <a [routerLink]="['/dashboard']">
-          <mat-icon class="secondary-text s-18">home</mat-icon>
-        </a>
-        <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-        <span class="secondary-text">{{ 'transactions' | i18n }}</span>
-      </div>
-      <div class="h1 mt-16">{{ 'transactions' | i18n }}</div>
-    </div>
-  </div>
-  <!-- / HEADER -->
-
-  <div class="p-24 content">
+<app-page title="{{ 'transactions' | i18n }}" [full]="true">
+  <div class="p-16">
 
     <div fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="20px">
       <div fxFlex="50">
@@ -53,7 +35,11 @@
 
     <div class="transactions-table">
       <app-transaction-table [dataSource]="dataSource"
-                             [account]="account"></app-transaction-table>
+                             [account]="account"
+                             [displayedColumns]="columns"
+      >
+
+      </app-transaction-table>
     </div>
   </div>
-</div>
+</app-page>
