--- a/web/angular-wallet/src/app/main/transactions/transactions.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transactions.component.html
@@ -1,21 +1,37 @@
 <app-page title="{{ 'transactions' | i18n }}" [full]="true">
   <div class="p-16">
 
-    <div fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="20px">
-      <div fxFlex="50">
-        <div class="transaction-filter">
-          <mat-form-field class="search-form">
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{ 'search' | i18n }}" #query>
-          </mat-form-field>
-        </div>
+    <div fxLayout="row wrap" fxLayoutAlign="space-between center">
+      <div>
+        <mat-form-field class="search-form">
+          <input matInput
+                 autocomplete="off"
+                 (keyup)="applyFilter($event.target.value)"
+                 [formControl]="searchField"
+                 placeholder="{{ 'search' | i18n }}"
+                 #query
+          >
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field class="search-form">
+          <mat-select [formControl]="typesField"
+                      placeholder="{{'type' | i18n}}"
+                      (selectionChange)="applyFilter()"
+          >
+            <mat-option *ngFor="let type of typeOptions" value="{{type}}">{{type}}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
       <div>
         <mat-form-field>
           <input matInput
                  placeholder="{{ 'from' | i18n }}"
+                 autocomplete="off"
+                 [max]="pickerToField.value"
                  [matDatepicker]="pickerFrom"
                  [formControl]="pickerFromField"
-                 (dateChange)="applyFilter(this.query.value)">
+                 (dateChange)="applyFilter()">
           <mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
           <mat-datepicker #pickerFrom></mat-datepicker>
         </mat-form-field>
@@ -24,13 +40,20 @@
         <mat-form-field>
           <input matInput
                  placeholder="{{ 'to' | i18n }}"
+                 autocomplete="off"
+                 [min]="pickerFromField.value"
+                 [max]="today"
                  [matDatepicker]="pickerTo"
                  [formControl]="pickerToField"
-                 (dateChange)="applyFilter(this.query.value)">
+                 (dateChange)="applyFilter()">
           <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
           <mat-datepicker #pickerTo></mat-datepicker>
         </mat-form-field>
       </div>
+      <button
+        mat-button
+        (click)="resetFilter()"
+      >{{'reset' | i18n }}</button>
     </div>
 
     <div class="transactions-table">
@@ -38,7 +61,6 @@
                              [account]="account"
                              [displayedColumns]="columns"
       >
-
       </app-transaction-table>
     </div>
   </div>
